2016-07-15  Richard Frith-Macdonald <rfm@gnu.org>

        * configure.ac:
        * Headers/GNUstepBase/config.h.in:
        * Source/GSQuickSort.m:
        * Source/GSShellSort.m:
        * Source/GSSorting.h:
        * Source/GSTimSort.m:
        * Source/NSSortDescriptor.m:
	Make sorting algorithms selectable at runtime rather than compile
	time.

2016-07-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSRunLoop.m (-acceptInputForMode:beforeDate:):
	Closer to OSX behavior ... when accepting input we should fire all
	timers (possibly repeatedly) since a timer is not counted as an
	input source.  Also simplify housekeeping timer so that it will
	keep loops running as it does on OSX.

2016-07-12  Niels Grewe <niels.grewe@halbordnung.de>

	* Headers/Foundation/NSObjCRuntime.h
	* Headers/GNUstepBase/GNUstep.h:
	
	Add NS_DESIGNATED_INITIALIZER macro

2016-07-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSICUString.m (UTextNSStringAccess):
	Fix to use signed integer variables so all the comparisons with zero
	as a boundary actually work as intended etc (spotted by Wolfgang).
	* Source/NSRunLoop.m: Closer to OSX behavior ... a nil date is treated
	like a date in the distant past (ie loop terminates at once), and the
	(-runUntilDate:) method fires any pending timers when given a date in
	the past.
	
2016-07-12  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/GSICUString.m (UTextNSStringAccess): Fix unsigned
	comparison to properly detect integer underflows.

2016-07-06  Niels Grewe <niels.grewe@halbordnung.de>

	* Tests/base/NSRegularExpression/basic.m: Test for -pattern
	double free.

2016-07-06  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSRegularExpression.m (-pattern): Fix bug where a UText
	structure owned by the icu library is incorrectly closed, which
	was causing a crash when -pattern is called more than once for the
	same NSRegularExpression.

2016-07-02  Richard Frith-Macdonald <rfm@gnu.org>
